메인 컨텐츠 2차 추가

--- a/index.html
+++ b/index.html
@@ -192,33 +192,296 @@
       <!--// about  -->
     </div>
     <!--// inner  -->
-    <section id="repair">
+    <section id="Sustainability">
       <h2>Sustainability</h2>
       <div class="inner">
-       
-        <!-- <div class="repair_con">
+        <div class="repair_con">
           <div class="r_con">
-            <h3>Lorem, ipsum.</h3>
             <div class="repair_slider">
+
               <ul class="swiper-wrapper">
-                <li class="swiper-slide">Slide 1</li>
-                <li class="swiper-slide">Slide 2</li>
-                <li class="swiper-slide">Slide 3</li>
+                <li class="swiper-slide">
+                  <h3>Lorem, ipsum.</h3>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur soluta blanditiis ab quia,
+                    quos nostrum illum velit doloribus quod aperiam?
+                  </p>
+                </li>
+                <li class="swiper-slide">
+                  <h3>Lorem, ipsum.</h3>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur soluta blanditiis ab quia,
+                    quos nostrum illum velit doloribus quod aperiam?
+                  </p>
+                </li>
+                <li class="swiper-slide">
+                  <h3>Lorem, ipsum.</h3>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur soluta blanditiis ab quia,
+                    quos nostrum illum velit doloribus quod aperiam?
+                  </p>
+                </li>
               </ul>
               <div class="repair-pagination"></div>
-              <div class="repair-prev"></div>
-              <div class="repair-next"></div>
+              <div class="repair-prev">
+                <i class="fas fa-arrow-left"></i>
+              </div>
+              <div class="repair-next">
+                <i class="fas fa-arrow-right"></i>
+              </div>
             </div>
           </div>
           <div class="r_con">
-            <h3>Lorem, ipsum.</h3>
-            <p>Lorem ipsum dolor sit.</p>
-            <a href="#none">SUBSCRIBE</a>
+            <div class="text_box">
+              <h3>Lorem, ipsum.</h3>
+              <p>Lorem ipsum dolor sit.</p>
+              <a href="#none">SUBSCRIBE <i class="far fa-envelope"></i></a>
+            </div>
           </div>
-        </div> -->
+        </div>
       </div>
     </section>
     <!--// repair  -->
+
+    <section id="journal">
+      <div class="inner">
+        <h2>Journal</h2>
+        <ul>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/community/01.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/community/01.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/community/01.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/community/01.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/community/01.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/community/01.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/community/01.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/community/01.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!--// journal  -->
+
+    <section id="bake">
+      <div class="inner">
+        <h2>Bake Your Own</h2>
+        <div class="left">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur facere porro aut ipsa rem numquam
+            voluptatibus repellendus iusto. Neque ut provident consectetur itaque iste doloribus aliquid qui quos, quia
+            corporis!</p>
+          <ul>
+            <li><i class=" far fas fa-check-circle"></i> Lorem ipsum dolor sit amet.</li>
+            <li><i class=" far fas fa-check-circle"></i> Lorem ipsum dolor sit amet.</li>
+            <li><i class=" far fas fa-check-circle"></i> Lorem ipsum dolor sit amet.</li>
+            <li><i class=" far fas fa-check-circle"></i> Lorem ipsum dolor sit amet.</li>
+            <li><i class=" far fas fa-check-circle"></i> Lorem ipsum dolor sit amet.</li>
+          </ul>
+        </div>
+        <!-- left -->
+        <div class="right">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/v70mU5jUge8?controls=0"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <!--// right  -->
+        <div class="icon_list">
+          <ul>
+            <li>
+              <i class="far fa-check-circle fa-4x"></i>
+              <div class="text_box">
+                <span>Lorem.</span>
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem, ipsum.</p>
+              </div>
+            </li>
+            <li>
+              <i class="far fa-check-circle fa-4x"></i>
+              <div class="text_box">
+                <span>Lorem.</span>
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem, ipsum.</p>
+              </div>
+            </li>
+            <li>
+              <i class="fas fa-hourglass-end fa-4x"></i>
+              <div class="text_box">
+                <span>Lorem.</span>
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem, ipsum.</p>
+              </div>
+            </li>
+            <li>
+              <i class="far fa-bookmark fa-4x"></i>
+              <div class="text_box">
+                <span>Lorem.</span>
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem, ipsum.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!--//bake  -->
+
+    <section id="repair">
+      <div class="inner">
+        <h2>repair</h2>
+      </div>
+    </section>
+
+    <section id="island">
+      <div class="inner">
+        <h2>island</h2>
+      </div>
+    </section>
+
+
+
+    <section id="sns">
+      <div class="inner">
+        <h2>Sns</h2>
+        <h3><a href="community.html"> FOLLOW US COMMUNITY</a></h3>
+        <ul>
+          <li>
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/main/new01.jpg" alt="">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/main/new01.jpg" alt="">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/main/new01.jpg" alt="">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/main/new01.jpg" alt="">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/main/new01.jpg" alt="">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/main/new01.jpg" alt="">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/main/new01.jpg" alt="">
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/main/new01.jpg" alt="">
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!--// sns -->
   </main>
   <!--// main -->
   <footer id="footer">
@@ -241,13 +504,15 @@
       <p>© 2022 Nudie Jeans Co. All rights reserved. <br>
         Privacy, Cookie Policy & Cookie Settings</p>
   </footer>
+
+
   <script>
     // visual
     let menu = ['Bake Your Own', 'Every pair of Nudie Jeans', 'Island Life']
     let swiper = new Swiper(".visual_slider", {
-      autoplay : {  
-        delay : 3000,   
-        disableOnInteraction : false, 
+      autoplay: {
+        delay: 3000,
+        disableOnInteraction: false,
       },
       speed: 1000,
       loop: true,
