메인페이지 레이아웃, 스크롤 완성

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="img/about_list01.jpg" alt="">
+                <img src="img/about/about_list01.jpg" alt="">
               </div>
               <div class="text_box">
                 <span>Awards</span>
@@ -87,7 +87,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="img/about_list02.jpg" alt="">
+                <img src="img/about/about_list02.jpg" alt="">
               </div>
               <div class="text_box">
                 <span>Repair</span>
@@ -100,7 +100,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="img/about_list03.jpg" alt="">
+                <img src="img/about/about_list03.jpg" alt="">
               </div>
               <div class="text_box">
                 <span>Re-use</span>
@@ -131,7 +131,7 @@
           
           <div>
             <div class="pic">
-              <img src="./img/about_list01.jpg" alt="">
+              <img src="./img/about/about_with01.jpg" alt="">
             </div>
           </div>
           <div class="text_line">
@@ -146,7 +146,7 @@
         </article>
         <article>
           <div class="pic">
-            <img src="./img/about_list01.jpg" alt="">
+            <img src="./img/about/about_with02.jpg" alt="">
           </div>
           <div class="text_box">
             <h3>We are not doing it for the awards...</h3>
