--- a/community.html
+++ b/community.html
@@ -78,7 +78,7 @@
         <li>
           <a href="#none">
             <div class="pic">
-              <img src="./img/community/01.jpg" alt="">
+              <img src="./img/community/journal01.jpg" alt="">
             </div>
             <div class="text_box">
               <h3>Lorem ipsum dolor sit amet.</h3>
@@ -125,7 +125,7 @@
         <li>
           <a href="#none">
             <div class="pic">
-              <img src="./img/community/01.jpg" alt="">
+              <img src="./img/community/journal02.jpg" alt="">
             </div>
             <div class="text_box">
               <h3>Lorem ipsum dolor sit amet.</h3>
@@ -136,7 +136,7 @@
         <li>
           <a href="#none">
             <div class="pic">
-              <img src="./img/community/01.jpg" alt="">
+              <img src="./img/community/journal03.jpg" alt="">
             </div>
             <div class="text_box">
               <h3>Lorem ipsum dolor sit amet.</h3>
@@ -155,7 +155,7 @@
         <li>
           <a href="#none">
             <div class="pic">
-              <img src="./img/community/01.jpg" alt="">
+              <img src="./img/community/journal04.jpg" alt="">
             </div>
             <div class="text_box">
               <h3>Lorem ipsum dolor sit amet.</h3>
@@ -239,7 +239,7 @@
         <li>
           <a href="#">
             <div class="pic">
-              <img src="./img/community/01.jpg" alt="">
+              <img src="./img/community/sns01.jpg" alt="">
             </div>
             <span>Facebook</span>
           </a>
@@ -247,7 +247,7 @@
         <li>
           <a href="#">
             <div class="pic">
-              <img src="./img/community/01.jpg" alt="">
+              <img src="./img/community/sns02.jpg" alt="">
             </div>
             <span>Insta</span>
           </a>
@@ -255,7 +255,7 @@
         <li>
           <a href="#">
             <div class="pic">
-              <img src="./img/community/01.jpg" alt="">
+              <img src="./img/community/sns03.jpg" alt="">
             </div>
             <span>Youtube</span>
           </a>
@@ -263,9 +263,9 @@
         <li>
           <a href="#">
             <div class="pic">
-              <img src="./img/community/01.jpg" alt="">
+              <img src="./img/community/sns04.jpg" alt="">
             </div>
-            <span>Youtube</span>
+            <span>Twitter</span>
           </a>
         </li>
       </ul>
