--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       </a>
       <nav class="menuMo">
         <h1>
-          <a href="index.html">DCODELAB</a>
-          <span>UI/UX DEVELOPMENT INSTITUTE</span>
+          <a href="index.html">Nudie Jeans</a>
         </h1>
         <ul id="gnbMo">
           <li><a href="about.html">ABOUT</a></li>
@@ -59,44 +58,44 @@
   </header>
   <!-- header -->
 
-  <div id="visual">
-    <div class="visual_slider">
-      <ul class="panel swiper-wrapper">
-        <li class=" swiper-slide con1">
-          <div class="text_box">
-            <span>Bake Your Own</span>
-            <h2>New Fit! <br><strong>Rad Rufus</strong> Baked by local denim dealers Strictly limited 25 pairs</h2>
-            <p>Ten stores, ten unique versions of our new fit, Rad Rufus, limited to 25 pieces per store.</p>
-          </div>
-        </li>
-        <li class=" swiper-slide con2">
-          <div class="text_box">
-            <span>Every pair of Nudie Jeans</span>
-            <h2>Free repairs Forever.</h2>
-            <p> comes with a promise of free repairs. And that promise is forever, no matter when, where, or how you got
-              them. Buying a pair of premium jeans is an investment, and since we provide the jeans, it’s only right we
-              take
-              care of the repairs.</p>
-          </div>
-        </li>
-        <li class=" swiper-slide con3">
-          <div class="text_box">
-            <span>No one is an island entirely on their own</span>
-            <h2>Island Life</h2>
-            <p>is whatever you make of it: a place for recreation or adventure. Pitch your tent wherever you please,
-              accidentally spot a UFO when you’re out birding, hit the beach to catch up on your reading, or why not go
-              for
-              a swim.</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <div class="swiper-pagination"></div>
-  </div>
-  <!--// visual -->
   <main>
-    <div class="inner">
-      <section id="new">
+    <section id="visual">
+      <div class="visual_slider">
+        <ul class="panel swiper-wrapper">
+          <li class=" swiper-slide con1">
+            <div class="text_box">
+              <span>Bake Your Own</span>
+              <h2>New Fit! <br><strong>Rad Rufus</strong> Baked by local denim dealers Strictly limited 25 pairs</h2>
+              <p>Ten stores, ten unique versions of our new fit, Rad Rufus, limited to 25 pieces per store.</p>
+            </div>
+          </li>
+          <li class=" swiper-slide con2">
+            <div class="text_box">
+              <span>Every pair of Nudie Jeans</span>
+              <h2>Free repairs Forever.</h2>
+              <p> comes with a promise of free repairs. And that promise is forever, no matter when, where, or how you got
+                them. Buying a pair of premium jeans is an investment, and since we provide the jeans, it’s only right we
+                take
+                care of the repairs.</p>
+            </div>
+          </li>
+          <li class=" swiper-slide con3">
+            <div class="text_box">
+              <span>No one is an island entirely on their own</span>
+              <h2>Island Life</h2>
+              <p>is whatever you make of it: a place for recreation or adventure. Pitch your tent wherever you please,
+                accidentally spot a UFO when you’re out birding, hit the beach to catch up on your reading, or why not go
+                for
+                a swim.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="swiper-pagination"></div>
+    </section>
+    <!--// visual -->
+    <section id="new">
+      <div class="inner">
         <h2>New Arrivals</h2>
         <ul>
           <li>
@@ -136,9 +135,11 @@
             </a>
           </li>
         </ul>
-      </section>
-      <!--// new -->
-      <section id="about">
+      </div>
+    </section>
+    <!--// new -->
+    <section id="about">
+      <div class="inner">
         <h2>About</h2>
         <div class="text_con">
           <ul class="text_list">
@@ -188,17 +189,17 @@
           <li><a href="#none" class="prev"><i class="fas fa-chevron-left"></i></a></li>
           <li><a href="#none" class="next"><i class="fas fa-chevron-right"></i></a></li>
         </ul>
-      </section>
-      <!--// about  -->
+      </div>
+    </section>
+    <!--// about  -->
     </div>
     <!--// inner  -->
     <section id="Sustainability">
       <h2>Sustainability</h2>
       <div class="inner">
-        <div class="repair_con">
-          <div class="r_con">
-            <div class="repair_slider">
-
+        <div class="Sustainability_con">
+          <div class="s_con">
+            <div class="Sustainability_slider">
               <ul class="swiper-wrapper">
                 <li class="swiper-slide">
                   <h3>Lorem, ipsum.</h3>
@@ -219,16 +220,16 @@
                   </p>
                 </li>
               </ul>
-              <div class="repair-pagination"></div>
-              <div class="repair-prev">
+              <div class="Sus-pagination"></div>
+              <div class="Sus-prev">
                 <i class="fas fa-arrow-left"></i>
               </div>
-              <div class="repair-next">
+              <div class="Sus-next">
                 <i class="fas fa-arrow-right"></i>
               </div>
             </div>
           </div>
-          <div class="r_con">
+          <div class="s_con">
             <div class="text_box">
               <h3>Lorem, ipsum.</h3>
               <p>Lorem ipsum dolor sit.</p>
@@ -238,8 +239,7 @@
         </div>
       </div>
     </section>
-    <!--// repair  -->
-
+    <!--// Sustainability  -->
     <section id="journal">
       <div class="inner">
         <h2>Journal</h2>
@@ -247,7 +247,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="./img/community/01.jpg" alt="">
+                <img src="./img/main/journal01.jpg" alt="">
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -258,7 +258,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="./img/community/01.jpg" alt="">
+                <img src="./img/main/journal02.jpg" alt="">
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -269,7 +269,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="./img/community/01.jpg" alt="">
+                <img src="./img/main/journal03.jpg" alt="">
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -280,7 +280,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="./img/community/01.jpg" alt="">
+                <img src="./img/main/journal04.jpg" alt="">
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -291,7 +291,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="./img/community/01.jpg" alt="">
+                <img src="./img/main/journal05.jpg" alt="">
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -302,7 +302,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="./img/community/01.jpg" alt="">
+                <img src="./img/main/journal06.jpg" alt="">
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -313,7 +313,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="./img/community/01.jpg" alt="">
+                <img src="./img/main/journal07.jpg" alt="">
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -324,7 +324,7 @@
           <li>
             <a href="#">
               <div class="pic">
-                <img src="./img/community/01.jpg" alt="">
+                <img src="./img/main/journal08.jpg" alt="">
               </div>
               <div class="text_box">
                 <h3>Lorem, ipsum dolor.</h3>
@@ -336,7 +336,6 @@
       </div>
     </section>
     <!--// journal  -->
-
     <section id="bake">
       <div class="inner">
         <h2>Bake Your Own</h2>
@@ -366,7 +365,7 @@
         <div class="icon_list">
           <ul>
             <li>
-              <i class="far fa-check-circle fa-4x"></i>
+              <i class="far fa-check-circle"></i>
               <div class="text_box">
                 <span>Lorem.</span>
                 <h3>Lorem, ipsum.</h3>
@@ -374,7 +373,7 @@
               </div>
             </li>
             <li>
-              <i class="far fa-check-circle fa-4x"></i>
+              <i class="far fa-check-circle "></i>
               <div class="text_box">
                 <span>Lorem.</span>
                 <h3>Lorem, ipsum.</h3>
@@ -382,7 +381,7 @@
               </div>
             </li>
             <li>
-              <i class="fas fa-hourglass-end fa-4x"></i>
+              <i class="fas fa-hourglass-end "></i>
               <div class="text_box">
                 <span>Lorem.</span>
                 <h3>Lorem, ipsum.</h3>
@@ -390,7 +389,7 @@
               </div>
             </li>
             <li>
-              <i class="far fa-bookmark fa-4x"></i>
+              <i class="far fa-bookmark "></i>
               <div class="text_box">
                 <span>Lorem.</span>
                 <h3>Lorem, ipsum.</h3>
@@ -402,21 +401,104 @@
       </div>
     </section>
     <!--//bake  -->
-
     <section id="repair">
       <div class="inner">
         <h2>repair</h2>
+        <div class="top_box">
+          <div class="mask01"></div>
+          <div class="mask02"></div>
+          <div class="text_box">
+            <h3>Lorem, ipsum.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto explicabo porro aspernatur
+              consequatur velit dolores soluta excepturi ratione repudiandae repellendus, et suscipit eum obcaecati sed
+              eos omnis provident nemo deleniti!</p>
+            <a href="#none">view more</a>
+          </div>
+        </div>
+        <!--// top_box -->
+        <div class="bottom_box">
+          <h3>Recent Posts</h3>
+          <ul>
+            <li>
+              <a href="#none">
+                <div class="pic">
+                  <img src="./img/main/repair_list01.jpg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </a>
+            </li>
+            <li>
+              <a href="#none">
+                <div class="pic">
+                  <img src="./img/main/repair_list02.jpg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </a>
+            </li>
+            <li>
+              <a href="#none">
+                <div class="pic">
+                  <img src="./img/main/repair_list03.jpg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!--// bottom_box  -->
       </div>
     </section>
-
+    <!--// repair  -->
     <section id="island">
+      <h2>Island</h2>
       <div class="inner">
-        <h2>island</h2>
+        <div class="island_box">
+          <h3>
+            Here Is What You Need
+          </h3>
+        </div>
+        <div class="island_con">
+          <p class="title">Lorem, ipsum dolor.</p>
+          <div class="island_slider">
+            <ul class="swiper-wrapper">
+              <li class="swiper-slide">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat quod odit labore nostrum debitis
+                  iusto blanditiis? Sed enim dignissimos amet optio praesentium, saepe, voluptates accusamus reiciendis
+                  neque non, minus numquam.
+                </p>
+              </li>
+              <li class="swiper-slide">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat quod odit labore nostrum debitis
+                  iusto blanditiis? Sed enim dignissimos amet optio praesentium, saepe, voluptates accusamus reiciendis
+                  neque non, minus numquam.
+                </p>
+              </li>
+              <li class="swiper-slide">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat quod odit labore nostrum debitis
+                  iusto blanditiis? Sed enim dignissimos amet optio praesentium, saepe, voluptates accusamus reiciendis
+                  neque non, minus numquam.
+                </p>
+              </li>
+            </ul>
+
+          </div>
+          <div class="island-prev">
+            <i class="fas fa-arrow-left"></i>
+          </div>
+          <div class="island-next">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+
+        </div>
+
+
+
       </div>
     </section>
-
-
-
+    <!--// island -->
     <section id="sns">
       <div class="inner">
         <h2>Sns</h2>
@@ -425,56 +507,56 @@
           <li>
             <a href="#none">
               <div class="pic">
-                <img src="./img/main/new01.jpg" alt="">
+                <img src="./img/main/sns01.jpg" alt="">
               </div>
             </a>
           </li>
           <li>
             <a href="#none">
               <div class="pic">
-                <img src="./img/main/new01.jpg" alt="">
+                <img src="./img/main/sns02.jpg" alt="">
               </div>
             </a>
           </li>
           <li>
             <a href="#none">
               <div class="pic">
-                <img src="./img/main/new01.jpg" alt="">
+                <img src="./img/main/sns03.jpg" alt="">
               </div>
             </a>
           </li>
           <li>
             <a href="#none">
               <div class="pic">
-                <img src="./img/main/new01.jpg" alt="">
+                <img src="./img/main/sns04.jpg" alt="">
               </div>
             </a>
           </li>
           <li>
             <a href="#none">
               <div class="pic">
-                <img src="./img/main/new01.jpg" alt="">
+                <img src="./img/main/sns05.jpg" alt="">
               </div>
             </a>
           </li>
           <li>
             <a href="#none">
               <div class="pic">
-                <img src="./img/main/new01.jpg" alt="">
+                <img src="./img/main/sns06.jpg" alt="">
               </div>
             </a>
           </li>
           <li>
             <a href="#none">
               <div class="pic">
-                <img src="./img/main/new01.jpg" alt="">
+                <img src="./img/main/sns07.jpg" alt="">
               </div>
             </a>
           </li>
           <li>
             <a href="#none">
               <div class="pic">
-                <img src="./img/main/new01.jpg" alt="">
+                <img src="./img/main/sns08.jpg" alt="">
               </div>
             </a>
           </li>
@@ -484,6 +566,36 @@
     <!--// sns -->
   </main>
   <!--// main -->
+  <ul class="scroll_list">
+    <li class="on">
+      <span>Main</span>
+    </li>
+    <li> 
+      <span>New Arrivals</span>
+    </li>
+    <li> 
+      <span>About</span>
+    </li>
+    <li> 
+      <span>SusTainability</span>
+    </li>
+    <li> 
+      <span>Journal</span>
+    </li>
+    <li> 
+      <span>Bake Your Own</span>
+    </li>
+    <li> 
+      <span>Repair</span>
+    </li>
+    <li> 
+      <span>Island</span>
+    </li>
+    <li> 
+      <span>Sns</span>
+    </li>
+   
+  </ul>
   <footer id="footer">
     <div class="inner">
       <h1>Nudie Jeans</h1>
@@ -505,39 +617,6 @@
         Privacy, Cookie Policy & Cookie Settings</p>
   </footer>
 
-
-  <script>
-    // visual
-    let menu = ['Bake Your Own', 'Every pair of Nudie Jeans', 'Island Life']
-    let swiper = new Swiper(".visual_slider", {
-      autoplay: {
-        delay: 3000,
-        disableOnInteraction: false,
-      },
-      speed: 1000,
-      loop: true,
-      pagination: {
-        el: '.swiper-pagination',
-        clickable: true,
-        renderBullet: function (index, className) {
-          return '<span class="' + className + '">' + (menu[index]) + '</span>';
-        },
-      },
-    });
-    // repair
-    let repair_swiper = new Swiper(".repair_slider", {
-      speed: 1000,
-      loop: true,
-      pagination: {
-        el: '.repair-pagination',
-        clickable: true,
-      },
-      navigation: {
-        nextEl: '.repair-next',
-        prevEl: '.repair-prev',
-      },
-    });
-  </script>
 </body>
 
 </html>
